# ReadingListBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  dockerfile  pyproject.toml
.github/workflows/: cd.yml  ci.yml  ci_cd.yml  deploy.yml  docker-publish.yml
bot/: __main__.py  config.py  db.py  handlers.py  main.py  messages.py  templates.py
bot/db/: db.py  models.py
bot/handlers/: __init__.py  add.py  change.py  clear.py  clear_list.py  complete.py  delete.py  filter_items.py  help.py  inline_query.py  list.py  list_items.py  show.py  start.py  summary.py
deploy/helm/charts/reading-list-bot/: Chart.yaml  values.yaml
deploy/helm/charts/reading-list-bot/templates/: NOTES.txt  configmap.yaml
deploy/helm/kerhoff-reading-list-bot/: Chart.yaml  values.yaml
deploy/helm/kerhoff-reading-list-bot/templates/: _helpers.tpl  hpa.yaml  ingress.yaml
deploy/helm/kerhoff-reading-list-bot/templates/tests/: test-connection.yaml
deploy/helm/kerhoff-reafing-list-bot/: values.yaml
deploy/helm/kerhoff-reafing-list-bot/templates/: configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
k8s/: deployment.yml  service.yml
migrations/: alembic.ini  env.py
migrations/versions/: 27e416f09959_initial_migration.py  5a8e541df3c2_create_tables.py  efe8595e52a0_import_data_from_sqlite.py
tests/: test_db.py  test_main.py
tests/test_handlers/: test_add.py  test_change.py  test_clear.py  test_complete.py  test_delete.py  test_help.py  test_list.py  test_show.py  test_start.py  test_summary.py
